Cabal-version: 3.4


Name:           test-proxy
Version:        0.0.0.1

Author:         Ivan Iablochkin
Maintainer:     Ivan Iablochkin
Homepage:       https://github.com/alleksandrgall/test-proxy
Bug-reports:    https://github.com/alleksandrgall/test-proxy
Copyright:      2024 Ivan Iablochkin
Build-Type:     Simple


Source-repository head
  Type: git
  Location: https://github.com/alleksandrgall/test-proxy


executable proxy-exe
  main-is: Main.hs
  hs-source-dirs:
    proxy-exe
  ghc-options: -O2 -threaded -rtsopts
  build-depends:
      test-proxy
    , base

Library
  Autogen-Modules:
    Paths_test_proxy
  Exposed-Modules:
    DB
  Other-Modules:
    Paths_test_proxy
  HS-Source-Dirs:
    src
  GHC-Options:
    -Wall
    -fno-warn-type-defaults
    -Wunused-packages

  Build-depends:
      base >= 4.7 && <5
    , bytestring < 0.13
    , ClickHaskell-client
    , ClickHaskell-tables
    , ClickHaskell-generics
    , ClickHouse-db-types
    , text < 2.2
    , time < 1.13
    , vector < 0.14
    , uuid < 1.4
    , wide-word < 0.2
  Default-language: Haskell2010
  Default-Extensions:
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    TypeApplications
    TypeFamilies
    TypeOperators
    ScopedTypeVariables

